fix som rotation problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AP_MidtermProject)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(AP_MidtermProject main.cpp model/cpp/Cell.cpp model/h/Cell.h model/cpp/Row.cpp model/h/Row.h model/cpp/Side.cpp model/h/Side.h model/cpp/Cube.cpp model/h/Cube.h model/cpp/solver.cpp model/h/solver.h model/cpp/MovementProvider.cpp model/h/MovementProvider.h)
+add_executable(AP_MidtermProject main.cpp model/cpp/Cell.cpp model/h/Cell.h model/cpp/Row.cpp model/h/Row.h model/cpp/Side.cpp model/h/Side.h model/cpp/Cube.cpp model/h/Cube.h model/cpp/MovementProvider.cpp model/h/MovementProvider.h utils/Solver.cpp utils/Solver.h)
